# vespa-colbert-trial

./: .gitignore  README.md  colbert.ipynb  docker-compose.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  postCreateCommand.sh
vespa-config/schemas/: doc.sd
