[tool.poetry]
name = "vespa-colbert-trial"
version = "0.1.0"
description = ""
authors = ["Satoshi Takatori"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyvespa = "^0.45.0"
colbert-ai = "^0.2.21"
numpy = "^2.1.3"
torch = "^2.5.1"
ipykernel = "^6.29.5"
ruff = "^0.8.1"
jupyter = "^1.1.1"

[tool.ruff]
extend-include = ["*.ipynb"]